--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-react": "^7.11.1",
     "extend": "^3.0.2",
     "globby": "^8.0.1",
     "husky": "^1.1.1",
